fix bg color and nav scroll on mobile

--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -1,2 +1,2 @@
 $textcolor: #FFFEEE;
-$bgcolor: #060B16;
+$bgcolor: rgb(14,19,28);//#11141D;
