--- a/assets/css/nav.scss
+++ b/assets/css/nav.scss
@@ -133,13 +133,20 @@
   }
 
   &.active {
-    position: fixed;
-    height: 100%;
+    position: absolute;
+    min-height: 100%;
+    height: fit-content;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    background-color: $bgcolor;
     transition: background-color 0.5s;
+    #bg {
+      background-color: $bgcolor;
+      height: 100vh;
+      width: 100vw;
+      z-index: 0;
+      position: fixed;
+    }
     .burger {
       position: fixed;
       margin-left: -10px;
